<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">BuildItBigger</string>
    <string name="tell_joke">Tell Joke from Java Library</string>
    <string name="launch_android_lib">Launch Android Library Activity</string>
    <string name="app_joke">This JOKE is the App Joke</string>
    <string name="kickOff">Retrieve joke from GCE</string>
    <string name="banner_ad_unit_id">ca-app-pub-6978009773705136/9317618808</string>
    <string name="interstitial_ad_unit_id">ca-app-pub-6978009773705136/1321517206</string>
</resources>